# aws-easy

./: README.md  Setup.hs  aws-easy.cabal  aws-simple.cabal  stack.yaml
app/: Main.hs
lib/Network/AWS/: Easy.hs  Simple.hs
lib/Network/AWS/Easy/: Classes.hs  Prelude.hs  Service.hs  TH.hs  Types.hs  Util.hs
lib/Network/AWS/Simple/: Classes.hs  Prelude.hs  Service.hs  TH.hs  Types.hs  Util.hs
