name:                                       aws-simple
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/aws-simple#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2018 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/aws-simple.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            amazonka
                                          , amazonka-core
                                          , base >= 4.7 && < 5
                                          , bytestring
                                          , lens
                                          , resourcet
                                          , template-haskell
                                          , text
  exposed-modules:                          AWSViaHaskell
                                          , AWSViaHaskell.Classes
                                          , AWSViaHaskell.Prelude
                                          , AWSViaHaskell.Service
                                          , AWSViaHaskell.TH
                                          , AWSViaHaskell.Types
                                          , AWSViaHaskell.Util

executable aws-simple-app
  default-language:                         Haskell2010
  hs-source-dirs:                           app
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            aws-simple
                                          , base >= 4.7 && < 5
